完成了项目初始化，后端搭建完成，前端用AI生成了了测试版的，后期还要再调整

--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
       {
         "from": "python",
         "to": "python",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "win": {
